--- a/frontend/src/components/Banner/Banner.css
+++ b/frontend/src/components/Banner/Banner.css
@@ -18,7 +18,7 @@
   .top-text{
     text-align: left;
     margin: 0;
-    padding: 0 0 0 0;
+    padding: 1px 0 0 0;
     font-weight: bold;
     font-size: 16px;
   }
