add service ads

--- a/frontend/src/components/Banner/Banner.css
+++ b/frontend/src/components/Banner/Banner.css
@@ -4,7 +4,7 @@
   }
   .service{
     background-color: #00BC86;
-    padding: 20px 30px 14px;
+    padding: 20px 30px 14px 30px;
   }
   .mySwiper{
     color: white ;
