--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,4 +2,4 @@
 *{
   font-family: 'Nunito', sans-serif;
 }
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900;1000&display=swap');
