--- a/frontend/src/components/Banner/Banner.css
+++ b/frontend/src/components/Banner/Banner.css
@@ -1,3 +1,26 @@
+@media only screen and (max-width: 763px){
+  .header-text{
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width: 1150px){
+  .col-new{
+    display: none;
+  }
+  .col-new-mobile{
+    display:flex;
+  }
+}
+@media only screen and (min-width: 1151px){
+  
+  .col-new-mobile{
+    display: none;
+    padding-bottom: 10px;
+  }
+}
+
+
+
 .carousel-inner img {
     margin: auto;
     
@@ -46,10 +69,16 @@
 .header-text{
   text-align: left;
   font-weight: 800;
+  white-space: nowrap;
+  width: 150px;
 }
 .dm-course{
   background-color: white;
   padding: 50px 50px;
+}
+.hot-course{
+  background-color: #edfaf1;
+  padding: 20px 50px;
 }
   .dm-btn{
     background-color: #fafafa;
@@ -82,7 +111,7 @@
     width: 150px;
   }
   .mgl-12{
-    margin-left: -12px;
+   
   }
 
   .btn-new{
@@ -94,7 +123,7 @@
     white-space: nowrap;
     font-weight: 600;
     font-size: 14px;
-    margin: 0 10px;
+    margin: 0 5px 15px;
   }
   .btn-new:hover{
     background-color: #fff;
@@ -127,4 +156,31 @@
     transition-delay: 0s;
     transition-property: all;
     box-shadow: 0px 4px 12px rgba(124,124,124,0.19);
+  }
+  .col-new{
+    text-align: end;
+  }
+
+  .btn-all{
+    margin-top: 10px;
+    padding: 10px 40px;
+    background-color: #00BC86;
+    color: white;
+    outline: none;
+    border: solid 1px #00BC86;
+    font-weight: 600;
+    font-size: 16px;
+    border-radius: 10px;
+  }
+  .btn-all:hover{
+    margin-top: 10px;
+    padding: 10px 40px;
+    background-color: white;
+    color: #00BC86;
+    outline: none;
+    border: solid 1px #00BC86;
+    font-weight: 600;
+    font-size: 16px;
+    border-radius: 10px;    
+    transition: all 0.5s ease-in-out;
   }
