--- a/frontend/src/components/Banner/Banner.css
+++ b/frontend/src/components/Banner/Banner.css
@@ -10,14 +10,31 @@
   .col-new-mobile{
     display:flex;
   }
+  .service {
+    padding:14px 30px 3px 30px;
+  }
+  .hot-course {
+    padding: 1px 20px;
+  }.dm-course{
+    padding: 1px 20px 20px;
+  }
 }
 @media only screen and (min-width: 1151px){
-  
+  .service {
+    padding:14px 70px 5px 70px;
+  }
+  .hot-course {
+    padding: 1px 70px;
+  }.dm-course{
+    padding: 1px 70px 30px;
+  }
   .col-new-mobile{
     display: none;
     padding-bottom: 10px;
+
   }
 }
+
 
 
 
@@ -27,12 +44,11 @@
   }
   .service{
     background-color: #00BC86;
-    padding: 20px 30px 14px 30px;
   }
   .mySwiper{
     color: white ;
-    padding: 0;
-    margin: auto;
+    margin: 0 10px;
+    width: 100%;
   }
   .icon{
     padding: 0 0;
@@ -74,11 +90,16 @@
 }
 .dm-course{
   background-color: white;
-  padding: 50px 50px;
 }
 .hot-course{
   background-color: #edfaf1;
-  padding: 20px 50px;
+}
+.slick-slide > div {
+  margin: 0 20px;
+}
+
+.slider-dm{
+  margin: 0 8px -20px -15px;
 }
   .dm-btn{
     background-color: #fafafa;
@@ -88,6 +109,7 @@
     border: none;
     white-space: nowrap;
     width: 250px;
+    margin: 5px 15px;
   }
   .dm-btn:hover {
     background-color: #00BC86;
@@ -100,7 +122,7 @@
     color: #ffffff;}
   .dm-text{
     color: #5B5B5B;
-    text-align: center;
+    text-align: left;
     margin: 5px 0 0 0;
     font-size: 16px;
     line-height: 2;
@@ -108,11 +130,9 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 150px;
+    width: 200px;
   }
-  .mgl-12{
-   
-  }
+  
 
   .btn-new{
     background-color: #fff;
@@ -171,6 +191,8 @@
     font-weight: 600;
     font-size: 16px;
     border-radius: 10px;
+    text-align: center;
+    display: inline-block;
   }
   .btn-all:hover{
     margin-top: 10px;
@@ -183,4 +205,7 @@
     font-size: 16px;
     border-radius: 10px;    
     transition: all 0.5s ease-in-out;
+  }
+  .hot-course{
+    padding-bottom:50px;
   }
