--- a/frontend/src/components/Product/Product.css
+++ b/frontend/src/components/Product/Product.css
@@ -26,12 +26,17 @@
         font-size: 16px;
     }
   }
+  .link{
+    text-decoration: none;
+    
+  }
 .Card{
     padding: 15px;
     box-shadow: 0px 4px 12px rgba(124,124,124,0.19);
     border-radius: 18px;
     border: none;
     margin-bottom: 12px;
+    text-decoration: none;
 }
 .card-img{
     border-radius: 12px;
@@ -83,6 +88,7 @@
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-box-orient:vertical;
+    color: #000;
 }
 .text-des{
     color: #00BC86;
@@ -95,4 +101,5 @@
     font-weight: 700;
     padding-top: 6px;
     padding-bottom: 8px;
+    text-decoration: none;
 }
