--- a/frontend/src/components/HomePage/ProductHomePage/ProductHomePage.css
+++ b/frontend/src/components/HomePage/ProductHomePage/ProductHomePage.css
@@ -20,6 +20,9 @@
     .list-product{
         padding: 0 50px;
     }
+    .new-course{
+        margin: 0 -10px 0 3px;
+    }
 }
 
 @media only screen and (min-width: 1151px) {
@@ -34,7 +37,11 @@
         padding-bottom: 10px;
     }
     .new-course{
-        padding: 0 100px;
+        padding: 0 110px 0 125px;
+    }
+    .list-hot-course{
+        padding-left: 100px;
+        padding-right: 100px;
     }
 }
 
