--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -19,7 +19,7 @@
     }
 }
 
-.container-form-login {
+.container-form-register {
   width: 300px;
 }
 
@@ -32,6 +32,7 @@ input[type="password"] {
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 3px;
   color: #403938;
+  width: 100%;
 }
 
 input[type="submit"] {
