--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
     width: 100%;
     height: 80px;
     display: flex;
@@ -39,27 +39,50 @@
 .dropDown_header {
     width: 100%;
     height: 100%;
+} */
+
+/* .dropDown_button {
+    padding: 15px;
+    align-items: center;
+    font-size: 15px;
+} */
+
+.dropDown_header_menu >a {
+    color:#00bc86 !important;
 }
 
-.dropDown_button {
+.dropDown_icon {
+    justify-content: flex-start;
     padding: 10px;
-    align-items: center;
 }
 
 .dropDown_list {
+    /* border-radius: 20px; */
     display: none;
     position:absolute;
-    min-width: 220px;
-    min-height: 5000px;
+    flex-direction: column;
+    align-items: center;
+    min-width: 120px;
+    min-height: 200px;
     float:left;
     background-color: white;
+    z-index: 100;
+}
+
+.dropDown_list >a {
+    text-decoration: none;
+    padding: 10px;
+    display: flex;
+    justify-content: flex-start;
+    font-size: 15px;
+    width: 220px;
 }
 
 .dropDown_header:hover > .dropDown_list {
     display: block;
 }
 
-.icon:before {
+.logo-wrapper::before {
     content: "";
     width: 1px;
     height: 31px;
@@ -73,4 +96,390 @@
 .icon {
     padding: 0 15px 0 0 ;
     border-right: 1px solid gray;
+
+}
+/* --------------------------------------------------------------------------------------------- */
+
+.tophead {
+    background-color: #f76758;
+    height: 51px;
+    line-height: 51px;
+    font-size: 15px;
+    font-family: "Nunito",serif;
+    color: #fff;
+    font-weight: 400;
+    text-align: center;
+}
+
+.tophead .contact_header {
+    display: inline-block;
+    margin-right: 70px;
+}
+
+.tophead .contact_header:last-child {
+    margin-right: 0;
+}
+
+.tophead .contact_header a {
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.header {
+    position: relative;
+    z-index: 99;
+}
+
+.header {
+    height: 81px;
+    line-height: 81px;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.06);
+    background-color: white;
+}
+
+.container {
+    width: 960px !important;
+}
+
+.row_header {
+    width: 1000px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px !important;
+    margin-left: -15px !important;
+}
+
+.header .col-header {
+    display:flex;
+    align-items: center;
+}
+
+.logo_center {
+    padding: 0 15px 0 0;
+    margin: 0 15px 0 0;
+}
+
+.icon:before {
+    content: "";
+    width: 1px;
+    height: 31px;
+    background: #929292;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.logo_center .logo {
+    display: inline-block;
+    text-align: center;
+}
+
+.logo_center .logo .logo-wrapper {
+    display: block;
+}
+
+.logo_center .logo img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.header .header_menu {
+    float: left;
+    position: relative;
+}
+
+.header .menu-bar-h {
+    margin-right: 15px;
+}
+
+.header .menu-bar-h .menu-bar {
+    font-family: "Nunito",serif;
+    font-size: 15px;
+    font-weight: 600;
+    color: #00bc86;
+    cursor: pointer;
+    width: 150px;
+}
+
+.header .menu-bar-h .menu-bar img {
+    margin-right: 3px;
+    transform: translateY(-2px);
+}
+
+.header_menu:hover  .header-nav {
+    display:block;
+}
+
+.header nav {
+    font-family: "Nunitio", serif;
+}
+
+.header-nav {
+    display: none;
+    position:absolute;
+    /* flex-direction: column; */
+    align-items: center;
+    min-width: 120px;
+    min-height: 200px;
+    float:left;
+    background-color: white;
+    z-index: 1;
+}
+
+.header_menu:hover ul.item_big {
+    overflow: visible;
+    max-height: 3000px;
+    max-width: 3000px;
+    opacity: 1;
+    visibility: visible;
+    -webkit-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    transform: scaleY(1);
+}
+
+.header-nav > ul.item_big {
+    text-align: left;
+    padding: 0%;
+    list-style-type: none;
+    /* margin: 0;
+    padding: 10px 0;
+    display: block;
+    background: #fff; */
+    width: 220px;
+    /* -webkit-transform: scaleY(0);
+    -ms-transform: scaleY(0);
+    transform: scaleY(0);
+    -webkit-transform-origin: 0 0 0;
+    -ms-transform-origin: 0 0 0;
+    transform-origin: 0 0 0;
+    margin-left: 0px;
+    box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.1);
+    -webkit-transition: all 0.4s cubic-bezier(0.3, 0.02, 0, 0.6);
+    transition: all 0.4s cubic-bezier(0.3, 0.02, 0, 0.6);
+    position: absolute;
+    top: 81px;
+    left: 0;
+    opacity: 0; */
+}
+
+.header-nav>ul.item_big>li.nav-item {
+    display: block;
+    position: relative;
+    margin-right: 0px;
+    margin-left: 0px;
+    border-radius: 0px;
+    padding: 0px 20px;
+}
+
+.header-nav>ul.item_big>li.nav-item>a {
+    display: block;
+    text-align: left;
+    font-size: 14px;
+    font-family: "Nunito",serif;
+    font-weight: 400;
+    position: relative;
+    text-decoration: none;
+    color: #403938;
+    line-height: 25px;
+    padding: 10px 0;
+    -webkit-transition: all 150ms ease-in-out;
+    -moz-transition: all 150ms ease-in-out;
+    -ms-transition: all 150ms ease-in-out;
+    -o-transition: all 150ms ease-in-out;
+    transition: all 150ms ease-in-out;
+    justify-content: flex-start;
+}
+
+.header-nav>ul.item_big>li.nav-item>a span {
+    position: relative;
+}
+
+.header-nav>ul.item_big>li.nav-item:hover>a {
+    color: #f76758;
+}
+
+.header_menu .wishlist_header {
+    display: block;
+    position: relative;
+    margin-right: 0px;
+    margin-left: 0px;
+    border-radius: 0px;
+    padding: 0px 20px;
+}
+
+
+.header_menu .wishlist_header a {
+    display: block;
+    text-align: left;
+    font-size: 14px;
+    font-family: "Nunito",serif;
+    font-weight: 400;
+    position: relative;
+    text-decoration: none;
+    color: #403938;
+    line-height: 25px;
+    padding: 10px 0;
+    -webkit-transition: all 150ms ease-in-out;
+    -moz-transition: all 150ms ease-in-out;
+    -ms-transition: all 150ms ease-in-out;
+    -o-transition: all 150ms ease-in-out;
+    transition: all 150ms ease-in-out;
+}
+
+.header_menu .wishlist_header a:hover {
+    color: #f76758;
+}
+
+.header-nav>ul.item_big>li.nav-item:hover>a>img.caret-right {
+    border-color: transparent transparent transparent #f76758;
+    color: #f76758;
+}
+
+/* .caret-right {
+    width: 7px;
+    color: #f76758;
+} */
+
+.header .header_search {
+    width: 190px;
+}
+
+.header .header_search form {
+    margin-bottom: 0;
+}
+
+.header .header_search form input {
+    width: 100%;
+    height: 40px;
+    min-height: 40px;
+    padding: 0 10px;
+    border-radius: 10px !important;
+    line-height: 40px;
+    background: #f3f3f3;
+    outline: none;
+    padding: 0 30px 0 15px;
+    overflow: hidden;
+    font-size: 14px;
+    border: none;
+    color: #929292;
+    border: 1px solid #f3f3f3;
+    font-weight: 400;
+}
+
+.header .header_search form .input-group-btn {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border-radius: 50% !important;
+    overflow: hidden;
+    color: #fff;
+}
+
+.header .header_search form .input-group-btn button {
+    padding: 0 10px;
+    position: absolute;
+    top: 0px;
+    right: 1px;
+    font-size: 14px;
+    height: 40px;
+    line-height: 40px;
+    color: #fff;
+    background-color: transparent;
+    border: none;
+}
+
+div.container {
+    --bs-gutter-x: 0 !important;
+}
+
+.header .header-right {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    position: relative;
+    width: 500px;
+}
+
+.header .header-right .text_header a {
+    text-decoration: none;
+    padding-right: 14px;
+    font-family: "Nunito",serif;
+    font-weight: 600;
+    font-size: 15px;
+    color: #5b5b5b;
+}
+
+.header .header-right .top-cart-contain {
+    display: inline-block;
+}
+
+.mini-cart {
+    height: 100px;
+    position: relative;
+}
+
+.header .header-right .top-cart-contain .img_hover_cart {
+    position: relative;
+}
+
+.cartIcon {
+    width: 24px;
+    height: 24px;
+    transform: translateY(7px);
+}
+
+.header .header-right .top-cart-contain .img_hover_cart .count_item_pr {
+    position: absolute;
+    right: -7px;
+    top: -10px;
+    min-width: 12px;
+    height: 12px;
+    line-height: 12px;
+    font-size: 8px;
+    border-radius: 10px;
+    color: #fff;
+    border: solid 1px #00bc86;
+    text-align: center;
+    background: #00bc86;
+}
+
+header .account_header {
+    padding-left: 15px;
+    margin-left: 15px;
+}
+
+.header .account_header a.btns {
+    background: rgba(0,188,134,0.22);
+    color: #00bc86;
+}
+
+.header .account_header a {
+    padding: 10px 25px;
+    text-decoration: none;
+}
+
+.header .account_header a {
+    padding: 10px 25px;
+    font-size: 15px;
+    font-family: "Nunito",serif;
+    color: #929292;
+    padding: 10px 30px;
+    line-height: 20px;
+    font-weight: 600;
+    border-radius: 10px;
+    float: right;
+    position: relative;
+}
+
+.header .account_header a.btns:hover {
+    color: white;
+}
+
+.header .account_header a:hover {
+    color: #00bc86;
 }
