--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -1,7 +1,13 @@
-.container-form-register {
-  width: 300px;
+@media only screen and (max-width: 1150px) {
+  .container-form-register {
+      width: 65%;
+  }
 }
-
+@media only screen and (min-width: 1151px) {
+  .container-form-register {
+      width: 40%;
+  }
+}
 input[type="text"],
 input[type="email"],
 input[type="password"] {
