--- a/frontend/src/components/Product/Product.css
+++ b/frontend/src/components/Product/Product.css
@@ -36,6 +36,10 @@
     text-decoration: none;
     
   }
+  .link:hover{
+    text-decoration: none;
+    color: #00BC86;
+  }
 .Card{
     padding: 15px;
     box-shadow: 0px 4px 30px rgba(19,28,25,0.1);
@@ -96,6 +100,9 @@
     display: -webkit-box;
     -webkit-box-orient:vertical;
     color: #000;
+}
+.text-tittle:hover{
+    color: #00BC86;
 }
 .text-des{
     color: #00BC86;
