--- a/frontend/src/components/HomePage/ProductHomePage/ProductHomePage.css
+++ b/frontend/src/components/HomePage/ProductHomePage/ProductHomePage.css
@@ -75,13 +75,16 @@
 }
 
 .slick-slide>div {
-    margin: 0 10px;
+    margin: 0 2px 0 -10px;
+    padding: 0 20px;
 }
 
 .slider-dm {
-    margin: 0 8px -10px -5px;
+    margin: 0 10px 0 -10px;
 }
-
+button.dm-btn{
+    text-decoration: none;
+}
 .dm-btn {
     background-color: #fafafa;
     padding: 12px 10px 12px 20px;
@@ -93,7 +96,9 @@
     margin: 5px 15px;
     overflow: hidden;
     text-overflow: ellipsis;
-    
+    color: #5B5B5B;
+    box-shadow: 2px 5px 8px rgba(19,28,25,0.1);
+
 }
 
 .dm-btn:hover {
@@ -102,12 +107,24 @@
     outline: solid 0px red;
     border-radius: 15px;
     border: none;
+    transition: all 0.4s ease-in-out;
+    color: white;
+}
+.dm-btn:hover svg.homepage-categories-icon{
+    color: #fff;
+}
+.homepage-categories-icon{
+    width: 36px;
+    height: 36px;
 }
 
 .dm-btn:hover .dm-text {
     color: #ffffff;
 }
+.homepage-categories-icon{
+    color:'#5b5b5b'
 
+}
 .dm-text {
     color: #5B5B5B;
     text-align: left;
