--- a/frontend/src/components/ProductList/ProductList.css
+++ b/frontend/src/components/ProductList/ProductList.css
@@ -78,7 +78,8 @@
     transition: all .5s linear;
     opacity: 0;
     list-style: none;
-    overflow: hidden;
+    height: 200px;
+    overflow: auto;
 }
 .sb-level{
     
@@ -152,12 +153,23 @@ select.form-select{
     text-align: left;
     display: block;
     margin: 0 12px 0 0;
+    font-size: 14px;
+    overflow: hidden;
+}
+select.form-control{
+    width: 120px;
+    font-size: 14px;
+    overflow: hidden;
+    justify-self: right;
 }
 .form-select{
     justify-content: right;
+    overflow: hidden;
+    font-size: 10px;
     padding: auto;
 }
 .form-select option{
     border-radius: 12px;
-
+    overflow: hidden;
+    font-size: 10px;
 }
