--- a/frontend/src/components/Typical_Teacher/Typical_Teacher.css
+++ b/frontend/src/components/Typical_Teacher/Typical_Teacher.css
@@ -6,3 +6,57 @@
     width: 200%;
     margin: auto;
   }
+.lec-card:hover .lec-info{
+  transform: translateY(0);
+  -webkit-transform: translateY(0);
+  opacity: 1;
+}
+.lec-name{
+  font-family: "Nunito",serif;
+  font-size: 20px;
+  text-align: center;
+  font-weight: 700;
+  line-height: 29px;
+  margin: 15px 0 0 0;
+  color: #403938;
+  text-decoration: none;
+}
+.lec-descrip{
+  font-weight: 500;
+  text-align: center;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  color: #403938;
+}
+.dm-typical{
+background-color: white;
+padding-bottom: 50px;
+padding-left: 20px;
+padding-right: 20px;
+}
+.header-text {
+  text-align: left;
+  font-weight: 800;
+  white-space: nowrap;
+  width: 150px;
+}
+.line-box{
+height: 5px;
+background-color: #FBB72C;
+display: block;
+border-radius: 20px;
+width: 100px;
+margin-bottom: 15px;
+margin-top: 50px;
+}
+.lec-card{
+  padding: 15px;
+  box-shadow: 0px 4px 30px rgba(19,28,25,0.1);
+  border-radius: 18px;
+  border: none;
+  margin-bottom: 12px;
+  text-decoration: none;
+}
