Redux ViewedItem and ComponentViewedItem

--- a/frontend/src/components/Product/Product.css
+++ b/frontend/src/components/Product/Product.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 760px){
     .text-tittle{
         font-size: 16px;
-        min-height: 20px;
+        min-height: 36px;
     }
     .text-price{
         font-size: 16px;
@@ -25,11 +25,15 @@
     .card-text-date-view{
         font-size: 10px;
     }
+    .product-cart-icon{
+        width: 25px;
+        height: 25px;
+    }
   }
   @media only screen and (min-width: 761px){
     .text-tittle{
         font-size: 20px;
-    min-height: 44px;
+    min-height: 46px;
 
     }
     .text-price{
@@ -45,7 +49,10 @@
         font-size: 16px;
     }
     .card-text-date-view{
-        font-size: 14px;
+        font-size: 12px;
+    }.product-cart-icon{
+        width: 30px;
+        height: 30px;
     }
   }
   .link{
