--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,103 +1,26 @@
-/* .header {
+
+.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+    position: relative;
     width: 100%;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    background-color: white;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
-.header_left {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.header_center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.header_menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.header_menu >li {
-    list-style-type: none;
-    padding: 10px;
-    background-color: white;
-}
-
-.header_menu >li>a {
-    text-decoration: none;
-    color: black;
-}
-
-.dropDown_header {
-    width: 100%;
-    height: 100%;
-} */
-
-/* .dropDown_button {
-    padding: 15px;
-    align-items: center;
-    font-size: 15px;
-} */
-
-/* .dropDown_header_menu >a {
-    color:#00bc86 !important;
-}
-
-.dropDown_icon {
-    justify-content: flex-start;
-    padding: 10px;
-}
-
-.dropDown_list { */
-    /* border-radius: 20px; */
-    /* display: none;
-    position:absolute;
-    flex-direction: column;
-    align-items: center;
-    min-width: 120px;
-    min-height: 200px;
-    float:left;
-    background-color: white;
-    z-index: 100;
-}
-
-.dropDown_list >a {
-    text-decoration: none;
-    padding: 10px;
-    display: flex;
-    justify-content: flex-start;
-    font-size: 15px;
-    width: 220px;
-}
-
-.dropDown_header:hover > .dropDown_list {
-    display: block;
-} */
-
-.logo::before {
-    content: "";
-    width: 1px;
-    height: 31px;
-    background: #929292;
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translate(-1260px, -6px);
-    z-index: 101;
-}
-
-.icon {
-    transform: translate3d(0px, -41px, 10px);
+.col-xl-5 {
+    height: 1px;
 }
 /* --------------------------------------------------------------------------------------------- */
+
+.img {
+    vertical-align: middle;
+}
+
+.img {
+    border: 0 none;
+    max-width: 100%;
+    height: auto;
+}
 
 .tophead {
     background-color: #f76758;
@@ -138,14 +61,19 @@
 }
 
 .container {
-    width: 960px !important;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .row_header {
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin-right: -15px !important;
-    margin-left: -93px !important;
+    margin-right: -15px;
+    margin-left: -15px;
 }
 
 .header .col-header {
@@ -154,11 +82,14 @@
 }
 
 .logo_center {
-    padding: 0 15px 0 0;
-    margin: 0 15px 0 0;
+    display: inline-block;
+    position: relative;
+    z-index: 9;
+    margin: 0 30px 0 0;
+    padding: 0 30px 0 0;
 }
 
-.icon:before {
+.logo_center:before {
     content: "";
     width: 1px;
     height: 31px;
@@ -189,7 +120,7 @@
 }
 
 .header .dropDown_icon {
-    transform: translate3d(10px, 5px, 10px);
+    transform: translate3d(-10px, -2px, 10px);
 }
 
 .header .menu-bar-title {
@@ -197,7 +128,8 @@
 }
 
 .header .menu-bar-h {
-    margin-right: 15px;
+    display: inline-block;
+    margin-right: 55px;
 }
 
 .header .menu-bar-h .menu-bar .bar-moblie {
@@ -210,8 +142,6 @@
     font-weight: 600;
     color: #00bc86;
     cursor: pointer;
-    width: 150px;
-    transform: translateX(24px);
 }
 
 .header_menu:hover  .header-nav {
@@ -220,18 +150,6 @@
 
 .header nav {
     font-family: "Nunitio", serif;
-}
-
-.header-nav {
-    display: none;
-    position:absolute;
-    /* flex-direction: column; */
-    align-items: center;
-    min-width: 120px;
-    min-height: 200px;
-    float:left;
-    background-color: white;
-    z-index: 1;
 }
 
 .header_menu:hover ul.item_big {
@@ -243,32 +161,20 @@
     -webkit-transform: scaleY(1);
     -ms-transform: scaleY(1);
     transform: scaleY(1);
-    transition-delay: 4s;
+    transition-delay: 3ms;
+}
+
+.header_menu:hover .menu_mobile {
+    visibility: visible;
+    transform: translateX(0);
+    display: block;
 }
 
 .header-nav > ul.item_big {
     text-align: left;
     padding: 0%;
     list-style-type: none;
-    /* margin: 0;
-    padding: 10px 0;
-    display: block;
-    background: #fff; */
-    width: 220px;
-    /* -webkit-transform: scaleY(0);
-    -ms-transform: scaleY(0);
-    transform: scaleY(0);
-    -webkit-transform-origin: 0 0 0;
-    -ms-transform-origin: 0 0 0;
-    transform-origin: 0 0 0;
-    margin-left: 0px;
-    box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.1);
-    -webkit-transition: all 0.4s cubic-bezier(0.3, 0.02, 0, 0.6);
-    transition: all 0.4s cubic-bezier(0.3, 0.02, 0, 0.6);
-    position: absolute;
-    top: 81px;
-    left: 0;
-    opacity: 0; */
+    width: 220px; 
 }
 
 .header-nav>ul.item_big>li.nav-item {
@@ -291,10 +197,6 @@
     color: #403938;
     line-height: 25px;
     padding: 10px 0;
-    -webkit-transition: all 150ms ease-in-out;
-    -moz-transition: all 150ms ease-in-out;
-    -ms-transition: all 150ms ease-in-out;
-    -o-transition: all 150ms ease-in-out;
     transition: all 150ms ease-in-out;
     justify-content: flex-start;
 }
@@ -344,17 +246,11 @@
     color: #f76758;
 }
 
-/* .caret-right {
-    width: 7px;
-    color: #f76758;
-} */
-
 .header .header_search {
-    width: 190px;
+    width: 329px;
 }
 
 .header .header_search .icon-search svg {
-    transform: translate3d(500px, -77px, 10px);
     width: 24px;
     height: 24px;
     color: #00bc86;
@@ -363,8 +259,6 @@
 
 .header .header_search form {
     margin-bottom: 0;
-    width: 310px;
-    transform: translate3d(20px, -40px, 10px);
 }
 
 .header .header_search .icon-search svg:hover form {
@@ -416,16 +310,11 @@
     border: none;
 }
 
-div.container {
-    --bs-gutter-x: 0 !important;
-}
-
 .header .header-right {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     position: relative;
-    width: 560px;
 }
 
 .header .header-right .text_header a {
@@ -442,7 +331,6 @@ div.container {
 }
 
 .mini-cart {
-    height: 100px;
     position: relative;
 }
 
@@ -453,7 +341,6 @@ div.container {
 .header .header-right .top-cart-contain .img_hover_cart svg {
     width: 24px;
     height: 24px;
-    transform: translateY(5px);
     color: #403938;
 }
 
@@ -527,13 +414,46 @@ div.container {
 
 /* Responsive */
 
-@media (min-width: 992px) {
+@media (min-width: 1400px) {
+    .container {
+        max-width: 1200px;
+    }
+}
+
+@media (min-width: 991px) {
     .header .menu-bar-h .menu-bar .bar-mobile {
         display: none;
     }
 
     .header .header_search .icon-search {
         display: none;
+    }
+
+    .header_menu:hover ul.item_big {
+        overflow: visible;
+        max-height: 3000px;
+        max-width: 3000px;
+        opacity: 1;
+        visibility: visible;
+        transform: scaleY(1);
+    }
+
+    .header-nav>ul.item_big {
+        text-align: left;
+        margin: 0;
+        padding: 10px 0;
+        display: block;
+        background: #fff;
+        width: 220px;
+        transform: scaleY(0);
+        transform-origin: 0 0 0;
+        margin-left: 0px;
+        box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.1);
+        transition: all 0.4s cubic-bezier(0.3, 0.02, 0, 0.6);
+        position: absolute;
+        top: 81px;
+        left: 0;
+        opacity: 0;
     }
 }
 
@@ -545,17 +465,44 @@ div.container {
 
     .header .col-header {
         display: block;
+        height: 81px
     }
 
-    .icon {
-        transform: translate3d(55px, 1px, 10px);
+    .logo_center {
+        padding: 0;
+        margin: 0;
+    }
+
+    .logo_center::before {
+        display: none;
+    }
+
+    .logo_center .logo {
+        margin: 0 auto;
+    }
+
+    .header .menu-bar-h {
+        height: 81px;
+        float: left;
+        position: relative;
+        line-height: 81px;
+        z-index: 99;
+        margin-right: 0;
+    }
+
+    .header .menu-bar-h .menu-bar {
+        font-size: 0;
+        display: block;
+        float: left;
+        line-height: 81px;
+        text-align: center;
+        position: relative;
     }
 
     .header .menu-bar-h .menu-bar svg {
         width: 24px;
         height: 24px;
         margin-right: 0;
-        transform: translate3d(20px, -80px, 10px);
     }
 
     .header .menu-bar-h .menu-bar .menu-bar-title {
@@ -580,8 +527,11 @@ div.container {
         display: none;
     }
 
-    .mini-cart {
-        transform: translate3d(250px, -163px, 10px);
+    .header .header_search {
+        width: auto;
+        position: absolute;
+        right: 50px;
+        top: 0;
     }
 
     .header .header_search:hover form {
@@ -593,21 +543,20 @@ div.container {
         position: absolute;
         z-index: 99;
         width: 400px;
-        top: 120px;
-        transform: translate3d(375px, -60px, 10px);
-    }
-
-    .header .header_search form .input-group-btn {
-        transform: translate3d(0px, 20px, 10px);
-    }
-
-    .header .header_search .icon-search svg {
-        transform: translate3d(580px, -75px, 10px);
+        top: 81px;
+        right: 0;
+        line-height: 40px;
     }
 
     .header .header_search form input {
         padding: 0 45px 0 20px;
         background: #fff;
+    }
+
+    .header .header-right {
+        position: absolute;
+        top: -81px;
+        right: 15px;
     }
 
     .header .account_header {
@@ -621,25 +570,85 @@ div.container {
     }
 
     .menu_mobile {
-        width: 280px;
         height: 100%;
         position: fixed;
         z-index: 999999;
         top: 0px !important;
         background-color: #00bc86;
+        color: white;
         overflow-x: hidden;
         padding: 0;
         box-shadow: 0px 2px 11px 1px rgba(168,168,168,0.54);
+        visibility: hidden;
         left: 0;
         text-align: left;
         transition: all 0.35s ease;
+        transform: translateX(-280px);
+    }
+
+    .header-nav>ul.item_big>li.nav-item>a {
+        color: white;
+    }
+
+    .header-nav>ul.item_big>li.none>a {
+        color: white;
+    }
+
+    .menu_mobile .item_big li a {
+        padding: 0 30px 0px 25px;
+        font-size: 14px;
+        line-height: 36px;
+        display: block;
+        font-weight: 400;
+        position: relative;
+        color: #fff;
+        text-decoration: none;
+        font-family: "Nunito",serif;
+        border-top: 1px solid rgba(0,0,0,0.075);
+    }
+
+    .header_menu .wishlist_header {
+        display: block;
+        position: relative;
+        padding: 0;
+    }
+
+}
+
+@media (max-width: 767px) {
+    .tophead {
+        height: 35px;
+        line-height: 35px;
+        font-size: 13px;
+    }
+
+    .tophead .contact_header:first-child {
+        display: none;
+    }
+
+    .header {
+        height: 48px;
+        line-height: 48px;
+    }
+
+    .header .menu-bar-h .menu-bar {
+        line-height: 48px;
+    }
+
+    .logo_center .logo .logo-wrapper {
+        width: 98px;
+    }
+
+    .header .header_search form {
+        width: 200px;
+        top: 48px;
     }
 }
 
-@media (max-width: 768px) {
-    .container {
-        max-width: 720px;
+@media (max-width: 425px) {
+    .header .header_search form .input-group-btn {
+        top: 4px;
     }
 }
-
+    
 
