--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -451,7 +451,7 @@
         box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.1);
         transition: all 0.4s cubic-bezier(0.3, 0.02, 0, 0.6);
         position: absolute;
-        top: 81px;
+        /* top: 81px; */
         left: 0;
         opacity: 0;
     }
