update Contact page and add Checkout page

--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -118,6 +118,9 @@ p.table-text.cart-item-price{
     color: red;
     background-color: white;
 }
+.btn-all {
+    text-decoration: none;
+}
 
 
 .cart-item-mb{
