--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -1,32 +1,8 @@
-@media only screen and (max-width: 767px) {
-  .body{
-      padding: 30px 20px;
-  }
-  .container-form-login {
-    width: 85%;
-  }
-  Banner {
-    display: none;
-  }
-  .swiper, .service {
-    display: none;
-  }
-}
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 1150px) {
     .body{
         padding: 30px 20px;
+
     }
-    .container-form-login {
-      width: 65%;
-    }
-}
-@media only screen and (min-width: 1151px) {
-  .body{
-      padding: 30px 20px;
-  }
-  .container-form-login {
-    width: 40%;
-  }
 }
 @keyframes rotate {
     0% {
@@ -36,6 +12,16 @@
       transform: rotate(180deg)
     }
   }
+@media only screen and (min-width: 1151px) {
+    .body{
+        padding: 30px 150px;
+
+    }
+}
+
+.container-form-login {
+  width: 300px;
+}
 
 input[type="text"],
 input[type="email"],
