--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -1,8 +1,32 @@
-@media only screen and (max-width: 1150px) {
+@media only screen and (max-width: 767px) {
+  .body{
+      padding: 30px 20px;
+  }
+  .container-form-login {
+    width: 85%;
+  }
+  Banner {
+    display: none;
+  }
+  .swiper, .service {
+    display: none;
+  }
+}
+@media only screen and (min-width: 768px) {
     .body{
-        padding: 30px 20px;
-
-    }
+      padding: 30px 20px;
+  }
+  .container-form-login {
+    width: 65%;
+  }
+}
+@media only screen and (min-width: 1151px) {
+  .body{
+    padding: 30px 20px;
+  }
+  .container-form-login {
+    width: 40%;
+  }
 }
 @keyframes rotate {
     0% {
@@ -12,16 +36,6 @@
       transform: rotate(180deg)
     }
   }
-@media only screen and (min-width: 1151px) {
-    .body{
-        padding: 30px 150px;
-
-    }
-}
-
-.container-form-login {
-  width: 300px;
-}
 
 input[type="text"],
 input[type="email"],
