--- a/frontend/src/components/User/UserAccount.css
+++ b/frontend/src/components/User/UserAccount.css
@@ -23,7 +23,7 @@
 }
 .container-form_user-account form input {
     padding: 8px;
-    margin: 20px 0;
+    margin-bottom: 20px;
     font-size: 16px;
     font-weight: 400;
     color: #333;
