--- a/frontend/src/components/CheckOut/CheckOut.css
+++ b/frontend/src/components/CheckOut/CheckOut.css
@@ -48,10 +48,23 @@ input[type="text"] {
     padding-bottom: 10px;
 }
 
+.checkOutPage .slidebar {
+    background-color: #fafafa;
+    border-left: 1px solid #717171;
+}
+
+
+
 /* Responsive */
 @media (min-width: 1200px) {
     .checkOutPage {
         background-color: white;
         padding: 30px 160px;
+    }
+}
+
+@media (min-width: 1000px) {
+    .sidebar_header, .sidebar_content {
+        padding-left: 2em;
     }
 }
