--- a/frontend/src/components/CheckOut/OrderSummary/OrderSummary.css
+++ b/frontend/src/components/CheckOut/OrderSummary/OrderSummary.css
@@ -4,9 +4,9 @@
     padding: 10px;
 }
 
-button:not(:disabled) {
-    margin-left: 0.85714em;
+.sidebar_content button:not(:disabled) {
     width: 55%;
+    margin-left: 10px;
 }
 
 .sidebar_header {
@@ -25,6 +25,7 @@ button:not(:disabled) {
 
 .sidebar_content input {
     height: 40px;
+    width: 80%;
 }
 
 .order-summary_section {
@@ -33,11 +34,14 @@ button:not(:disabled) {
 }
 
 .sidebar_content table {
-    border-collapse: collapse;
+    border-collapse: separate;
     border-spacing: 0;
     font-size: 1em;
-    width: 100%;
     margin: 0;
+}
+
+.sidebar_content .product-table {
+    margin-top: 5px;
 }
 
 .sidebar_content tbody {
@@ -54,8 +58,101 @@ button:not(:disabled) {
     padding-top: 0.75em;
 }
 
+.product-thumbnail {
+    width: 70px;
+    height: 60px;
+    border: 1px solid rgba(175,175,175,.34);
+    border-radius: 8px;
+    background: #fff;
+    position: relative;
+}
+
+.product-thumbnail img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+}
+
+.product-table tbody th, .stock-table tbody th {
+    padding-left: 1em;
+    font-weight: 500;
+    color: #333;
+    padding-top: 0;
+    padding-bottom: 0;
+    width: 100%;
+}
+
+.product_description {
+    text-align: left;
+}
+
+.total-line p {
+    padding-top: 17px;
+    text-align: right;
+}
+
+p.payment-due_price {
+    color: red;
+    font-weight: 900;
+}
+
+span.payment-due_label-total {
+    font-size: 1.2rem;
+}
+
+table {
+    width: 100%;
+}
+
+.order-summary_section a {
+    color: #2a9dcc;
+    text-decoration: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+button.complete-order-button.btn.btn-primary {
+    width: 100%;
+    padding: 10px 20px 10px 20px;
+    margin-left: 70px;
+
+}
+
+.order-summary_nav {
+    display: flex;
+    align-items: center;
+}
+
+.field_input-btn-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.total-line button.complete-order-button.btn.btn-primary {
+    text-align: right;
+}
+
+/* responsive */
+
 @media (min-width: 1000px) {
     /* .sidebar_header, .sidebar_content {
         padding-left: 2em;
     } */
 }
+
+@media (max-width: 768px) {
+    .checkOutPage .container .col-md-8 {
+        width: 100%;
+    }
+
+    .checkOutPage .row {
+        display: block;
+    }
+}
+
