--- a/frontend/src/components/CheckOut/OrderSummary/OrderSummary.css
+++ b/frontend/src/components/CheckOut/OrderSummary/OrderSummary.css
@@ -119,7 +119,7 @@ table {
 button.complete-order-button.btn.btn-primary {
     width: 100%;
     padding: 10px 20px 10px 20px;
-    margin-left: 70px;
+    margin-right: 30px;
 
 }
 
