--- a/frontend/src/components/FullPageLoader/FullPageLoader.css
+++ b/frontend/src/components/FullPageLoader/FullPageLoader.css
@@ -9,7 +9,8 @@
     overflow-y: auto;
 }
 .loader-container .loader {
-    left: 46%;
-    bottom: 30%;
+    text-align: center;
+    width: 100%;
+    bottom: 50%;
     position: absolute;
 }
