--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -8,6 +8,11 @@
       width: 50%;
   }
 }
+.container-form-register input[type="text"],
+.container-form-register input[type="email"],
+.container-form-register input[type="password"] {
+  height: 40px; 
+}
 input[type="text"],
 input[type="email"],
 input[type="password"] {
@@ -41,7 +46,7 @@ input[type="submit"]:hover {
 .button-container {
   display: flex;
   justify-content: center;
-  margin: 10px;
+  margin: 10px 0;
   width: 100%;
 }
 
@@ -49,7 +54,7 @@ input[type="submit"]:hover {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin: 10px;
+  margin-top: 16px;
   font-weight: bold;
   padding-bottom: 4px;
 }
