--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -466,11 +466,7 @@
     width: 35px;
 }
 
-.header .account_header a.user-profile::before {
-    display: none;
-}
-
-.header .account_header a.logout-action::before {
+.header .account_header li a::before {
     display: none;
 }
 
@@ -501,6 +497,17 @@
     text-align: center;
 }
 
+.header .account_header a:before {
+    content: "";
+    width: 1px;
+    height: 31px;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #929292;
+}
+
 
 /* Responsive */
 
@@ -513,7 +520,7 @@
     }
 }
 
-@media (max-width: 1199px) and (min-width: 992px) {
+@media (max-width: 1199px) and (min-width: 993px) {
     .header .menu-bar-h {
         margin-right: 10px;
     }
@@ -524,7 +531,7 @@
 }
 
 
-@media (min-width: 992px) {
+@media (min-width: 993px) {
     .header .menu-bar-h .menu-bar .bar-mobile {
         display: none;
     }
@@ -561,10 +568,14 @@
     }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 993px) {
 
     .header {
         text-align: center;
+    }
+
+    .header .col-lg-6 {
+        width: 100%;
     }
 
     .header .col-header {
