--- a/frontend/src/components/Video/Video.css
+++ b/frontend/src/components/Video/Video.css
@@ -31,12 +31,13 @@
 
 
 .video-content {
-	width: 80%;
+	width: 70%;
 }
 
 .video-list-content {
-	width: 20%;
+	width: 30%;
 	overflow-y: auto;
+	padding-left: 20px;
 }
 
 .video-list {
@@ -77,7 +78,9 @@
 	font-size: 16px;
 	font-weight: 500;
 }
-
+.video-decription{
+	display: block;
+}
 .video-decription .name {
 	font-weight: 700;
 }
